java/java-tests/testData/codeInsight/daemonCodeAnalyzer/annotations/incompatibleType3.java
@interface Ann {
    short[] u () default 0;
}

@Ann(u={<error descr="Incompatible types. Found: 'int', required: 'short'">2222222</error>}) class D {
}
